hphp/hack/test/typecheck/nonnull/nonnull_type_alias.php.exp
File "nonnull_type_alias.php", line 3, characters 6-12:
Cannot use `NonNull` as a type name as it is reserved (Parsing[1002])
