hphp/hack/test/typecheck/nonnull/nonnull_type_alias.php
<?hh // strict

type NonNull = nonnull;
